@@ -1,4 +1,4 @@
-Summary: A C++ API to the PostgreSQL database management system.
+Summary: C++ API to the PostgreSQL database management system.
 Name: libpqxx
 Version: @VERSION@
 Release: 1
@@ -13,13 +13,14 @@ Prefix: %{_prefix}
 Docdir: %{_docdir}
 
 %description
-What libpqxx brings you is effective use of templates to reduce the inconvenience of
-dealing with type conversions; of standard C++ strings to keep you from having
-to worry about buffer allocation and overflow attacks; of exceptions to take
-the tedious and error-prone plumbing around error handling out of your hands;
-of constructors and destructors to bring resource management under control; and
-even basic object-orientation to give you some extra reliability features that
-would be hard to get with most other database interfaces.
+This is the official C++ client API for postgres.  What libpqxx brings you is
+effective use of templates to reduce the inconvenience of dealing with type
+conversions; of standard C++ strings to keep you from having to worry about
+buffer allocation and overflow attacks; of exceptions to take the tedious and
+error-prone plumbing around error handling out of your hands; of constructors
+and destructors to bring resource management under control; and even basic
+object-orientation to give you some extra reliability features that would be
+hard to get with most other database interfaces.
 
 %package devel
 Summary: Libraries, includes, etc. to develop PostgreSQL applications in C++.
